# slam_robot

./: CMakeLists.txt  package.xml  readme.md
config/: control.yaml
data/: cmdvel_log.txt  logger.py  odom_clean_data.txt  odom_cleaner.py  odom_log.txt  plot_robot.py  plotter.py  scan_cleaner.py  slam.py  test.py
launch/: gazebo.launch.py  robot_state_publisher.launch.py  spawn_robot_ros2.launch.py  spawn_turtlebot3.launch.py
meshes/: base_link.STL  camera_link.STL  left_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
models/turtlebot3_burger/: model.sdf
models/walls/: model.sdf
scripts/: key_board.py  slam_map.py
urdf/: turtlebot.urdf.xacro  turtlebot.urdf.xacrocorrupt  turtlebot3_burger.urdf  turtlebot3_burger.urdf.xacro
